--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -80,3 +80,9 @@
     @apply bg-amber-50 bg-opacity-70 border-[1px] border-solid border-amber-400 px-6 rounded-2xl dark:border-amber-600 dark:bg-amber-900 dark:bg-opacity-50 ;
   }
 }
+
+@layer katex {
+  .katex {
+    @apply overflow-x-auto;
+  }
+}
