content: add sicpjs-18 with img bg white

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -79,6 +79,9 @@
   aside {
     @apply bg-amber-50 bg-opacity-70 border-[1px] border-solid border-amber-400 px-6 rounded-2xl dark:border-amber-600 dark:bg-amber-900 dark:bg-opacity-50 ;
   }
+  img {
+    @apply bg-white rounded-lg;
+  }
 }
 
 @layer katex {
